<resources>
    <string name="app_name">نی نی گراف</string>

    <!--Main Activity-->
    <string name="enter_phone">شماره تلفن همراه خود را وارد نمایید:</string>
    <string name="hint_number_phone">09 - - - - - - - - -</string>
    <string name="login_caption_part1">بعد از وارد کردن شماره خود روی دکمه</string>
    <string name="login_caption_part2">"ثبت"</string>
    <string name="login_caption_part3">بزنید</string>
    <string name="login">ثبت</string>

    <!--Code Verification Activity-->
    <string name="enter_code">کد 4 رقمی ارسال شده را وارد نمایید</string>
    <string name="hint_code">- - - -</string>
    <string name="verification_caption_part1">بعد از وارد کردن کد پیامکی روی دکمه</string>
    <string name="verification_caption_part2">تایید</string>
    <string name="verification_caption_part3">بزنید</string>
    <string name="ok">تایید</string>
    <string name="send_code_again">ارسال مجدد کد فعال سازی</string>
    <string name="number_seconds">(60)</string>
    <string name="edit_phone_number">اصلاح شماره تلفن</string>

    <!--Personal Info Activity-->
    <string name="enter_personal_info">اطلاعات خود را وارد نمایید</string>
    <string name="hint_name">نام و نام خانوادگی</string>
    <string name="hint_state">استان</string>
    <string name="hint_city">شهر</string>
    <string name="hint_address">آدرس پستی</string>
    <string name="hint_postal_code">کد پستی 10 رقمی</string>
    <string name="personal_info_caption1">•	آدرس و کد پستی مورد نیاز است تا سفارش شما را از طریق پست براتون ارسال کنیم</string>
    <string name="personal_info_caption2">•	لطفا تا پایان انجام عملیات ثبت سفارش از برنامه خارج نشوید</string>
    <string name="save_info">تایید و پرداخت</string>

    <!--Main Menu Activity-->
    <string name="brand_name">نی نی گراف</string>
    <string name="menu">منو</string>
    <string name="new_order">ثبت سفارش</string>
    <string name="follow_order">پیگیری سفارش</string>
    <string name="edit_info">ویرایش اطلاعات</string>
    <string name="support">پشتیبانی و تماس با ما</string>
    <string name="logout">خروج از حساب</string>

    <!--Payment Activity-->
    <string name="payment_caption1">•	زمان تحویل عکس های طراحی شده حداکثر 3 روز بعد از پرداخت می باشد</string>
    <string name="payment_caption2">•	زمان تحویل عکس های چاپ شده حداکثر 6 روز بعد از پرداخت می باشد</string>

    <!--New Print Order Activity-->
    <string name="text_print_caption_1">بعد از کلیک روی دکمه \"انتخاب عکس\" باید تصویری که میخواهید چاپ کنید را از گالری انتخاب نمایید.</string>
    <string name="text_print_caption_2">برای هر عکس می‌توانید \"سایز چاپ\"، \"جنس کاغذ\" و یا \"شاسی بودن\" آن را انتخاب نمایید.</string>
    <string name="text_print_caption_3">عکس‌ها حداکثر تا 3 روز کاری به دستتون میرسه.</string>
</resources>
