<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.ninigraph.ninigraph.Activity.CustomerInfoActivity"
    android:background="@mipmap/bg_primary">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            android:src="@drawable/icon_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="اطلاعات خریدار"
            android:textSize="24sp"
            android:textColor="#fff"/>

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lay_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="48dp">

        <TextView
            android:id="@+id/txt_enter_personal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/enter_personal_info"
            android:textSize="22sp"
            android:textColor="#000"/>

        <LinearLayout
            android:id="@+id/lay_edt_texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/txt_enter_personal_info"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="1dp">

                <EditText
                    android:id="@+id/edt_txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff"
                    android:hint="@string/hint_name"
                    android:textSize="22sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="1dp">

                <EditText
                    android:id="@+id/edt_txt_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff"
                    android:hint="@string/hint_state"
                    android:textSize="22sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="1dp">

                <EditText
                    android:id="@+id/edt_txt_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff"
                    android:hint="@string/hint_city"
                    android:textSize="22sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="1dp">

                <EditText
                    android:id="@+id/edt_txt_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff"
                    android:hint="@string/hint_address"
                    android:textSize="22sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="1dp">

                <EditText
                    android:id="@+id/edt_txt_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff"
                    android:hint="@string/hint_postal_code"
                    android:textSize="22sp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/lay_edt_texts"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/personal_info_caption1"
            android:textColor="#000"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/caption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/caption1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/personal_info_caption2"
            android:textColor="#000"
            android:textSize="8sp"/>

        <Button
            android:id="@+id/btn_save_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingRight="32dp"
            android:paddingLeft="32dp"
            android:background="@drawable/bg_button_color_accent"
            android:text="@string/save_info"
            android:textSize="22sp"
            android:textColor="#fff"/>
    </android.support.constraint.ConstraintLayout>

    <include
        layout="@layout/layout_no_connection"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>
