<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_primary"
    tools:context="ir.ninigraph.ninigraph.Activity.NewPrintOrderActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lay_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="چاپ عکس"
                android:textColor="#fff"
                android:textSize="24sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/card_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_print_caption"
            android:orientation="vertical"
            android:paddingBottom="6dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="راهنما:"
                android:textColor="#d35400"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_print_caption_1"
                android:textColor="#d66421"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_print_caption_2"
                android:textColor="#d66421"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_print_caption_3"
                android:textColor="#d66421"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/choose_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:background="@drawable/bg_btn_choose_pic"
            android:paddingBottom="6dp"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:paddingTop="6dp"
            android:text="انتخاب عکس"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_caption" />

        <ImageView
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/blue_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <include
        android:id="@+id/lay_no_con"
        layout="@layout/layout_no_connection"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>
